  RinexQuality.get_session_code(second_of_hour) to solve this issue
### Updated
- RinexQuality: fixed wrong session code of last entry. Solved with the static
  method "RienxQuality.get_session_code(second_of_hour)

## 0.1.6 - 2019-02-14
### Updated
- RinexFactory: class lives no in separate file, can build classes from file or by version
- RinexObsReader: class holds now initial part for Rinex2 and Rinex3
- RinexObsHeader: class holds now initial part for Rinex2 and Rinex3

## 1.0.1 - 2022-08-30
### Changed
- RinexQuality: RinStat format adapted

## 1.0.2 - 2023-11-24
### Added
- RinexObsHeader: Added REGEX for L3 signals and D obs types (descriptors)
### Changed
- RinexObsReader: method read_satellite correct parsing ob decriptors

## 1.0.3 - 2025-02-27
- Reset everything

## 1.0.4 - 2025-02-27
- CHG: moved rinex_parser into src directory
- CHG: changed logger to INFO
- ADD: pyproject.toml
- CHG: README.md
- CHG: obs_reader.py - to_rinex3(), parser, interval filter
- CHG: obs_header.py - to_rinex3()

## 1.1.0 - 2025-03-16
- NEW: Filter observation types that are not used
- REM: Pipfile, using pyproject.toml now
- ADD: Constants for time formatting
- FIX: Faster Rinex Epoch preparation
- ADD: Entrypoint *ridah-main*

## 1.1.1 - 2025-03-19
- CHG: Readme update

## 1.1.2 - 2025-03-19
- FIX: Add "::RX3::" as filename

## 1.1.3 - 2025-03-19
- FIX: Adding epoch interval into header if missing

## 1.1.4 - 2025-03-19
- CHG: pyproject.toml

## 1.1.5 - 2025-03-21
- FIX: Error in Rinex Header writing
- ADD: Crop data by TimeWindow
- ADD: Use Skeleton to edit header
- CHG: Using Black Formatter for python code
- ADD: Get Country from Filename
- ADD: Get Data origin from Filename ('S' or 'R')
- ADD: Allow wildcard input
- ADD: Merge functionality for likely named files (-m)
- ADD: Delete feature for ridah-obs (-d)
- ADD: Verbose feature for ridah-obs (-d)
- REM: external dependency to "convertdate"
- ADD: timescale.py package
- FIX: faster file writing